# toopi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.rst  setup.cfg  setup.py
toopi/: __init__.py  cli.py  paste.py  utils.py
