[metadata]
name = toopi
version = 0.2
author = Alexander Kapshuna
author_email = kapsh@kap.sh
license = MIT
description = Client for pastebins inspired by wgetpaste
long_description = file: README.rst
url = https://github.com/kapsh/toopi
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    requests
python_requires = >="3.7"

[options.entry_points]
console_scripts =
    toopi = toopi.cli:main

[options.extras_require]
clip =
    pyperclip
dev =
    pre-commit
    black
    isort
